--- a/NotesForYou/Main screen/View/Base.lproj/Main.storyboard
+++ b/NotesForYou/Main screen/View/Base.lproj/Main.storyboard
@@ -43,8 +43,9 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Notes for you" id="Z2Z-7v-mMi">
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="add" id="Xnc-xx-SQ6">
+                            <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="saveNote:" destination="BmE-zz-VxU" id="8Uv-Ii-FcM"/>
+                                <action selector="addNote:" destination="BmE-zz-VxU" id="8Uv-Ii-FcM"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -63,6 +64,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Cc9-gs-vZt">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="20"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="BmE-zz-VxU" kind="relationship" relationship="rootViewController" id="EWh-XX-oU0"/>
