Add 2 files and fixed to mvc pattern

--- a/NotesForYou/Main screen/View/Base.lproj/Main.storyboard
+++ b/NotesForYou/Main screen/View/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Notes for you-->
         <scene sceneID="iS5-pn-FHJ">
             <objects>
-                <tableViewController id="BmE-zz-VxU" customClass="MainTableViewController" customModule="NotesForYou" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="main" id="BmE-zz-VxU" customClass="MainTableViewController" customModule="NotesForYou" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1iK-hy-CAs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
